--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "font-awesome": "^4.7.0",
+    "vanilla-cookieconsent": "^2.9.2",
     "waypoints": "^4.0.1"
   }
 }
